# CheckTools

./: .gitignore  CMakeLists.txt  package.py
meshChecker/src/: meshChecker.cpp  meshChecker.h
meshChecker/tests/: CMakeLists.txt  test_meshChecker.cpp
src/: CMakeLists.txt
src/meshChecker/: CMakeLists.txt  README.md
src/meshChecker/src/: StaticStack.h  meshChecker.cpp  meshChecker.h  pluginMain.cpp
src/meshChecker/tests/: find_triangles.ma  overlapping_face.ma  overlapping_face.ma.REMOVED.git-id  overlapping_triangles.ma  overlapping_triangles2.ma  triangles.ma
src/uvChecker/: README.md
src/uvChecker/src/: uvChecker.cpp  uvChecker.h
src/uvOverlapChecker/src/: findUvOverlaps.cpp
uvChecker/src/: findUvOverlaps.cpp  findUvOverlaps.h  uvChecker.h
uvOverlapChecker/: CMakeLists.txt
